# vogogo-haskell

./: Makefile  README  Vogogo.hs  vogogo.cabal
Vogogo/: Account.hs  Customer.hs  Internal.hs  Transaction.hs
